--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -40,7 +40,7 @@ jobs:
           go-version: '1.25.6'
 
       - name: Install Core
-        run: go install cogentcore.org/core@v0.3.14 && core setup
+        run: go install cogentcore.org/core@main && core setup
 
       - name: Build App
         run: core build web -o static
